--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "cpf-cnpj-validator": "^1.0.3",
     "maska": "^1.5.0",
     "nuxt": "^2.15.8",
+    "v-money": "^0.8.1",
     "vue": "^2.6.14",
     "vue-localstorage": "^0.6.2",
+    "vue-money-mask": "^0.8.1",
     "vue-server-renderer": "^2.6.14",
     "vue-snotify": "^3.2.1",
     "vue-template-compiler": "^2.6.14",
